Update launcher references in Arlith class